--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rasheen Ruwisha</title>
+     <meta name="title" content="Rasheen Ruwisha | Full Stack Developer">
+    <meta name="description" content="Hire Professional Freelancer &amp; Full Stack Developer. Building API's and web applications, hi-end solutions, website maintenance &amp;">
+    
 <meta property="og:title" content="Rasheen Ruwisha | Full Stack Developer">
     <meta property="og:description" content="Hire Professional Freelancer &amp; Full Stack Developer. Building API's and web applications, hi-end solutions, website maintenance &amp;">
     <meta property="og:url" content="https://rasheenruwisha.github.io/">
