--- a/contact.html
+++ b/contact.html
@@ -116,6 +116,72 @@
         </div>
 
     </section>
+
+    
     <script src="./js/contact.js"></script>
+
+
+    <script>
+        var scrolling = false;
+        var oldTime = 0;
+        var newTime = 0;
+        var isTouchPad;
+        var eventCount = 0;
+        var eventCountStart;
+
+        var mouseHandle = function (evt) {
+            var isTouchPadDefined = isTouchPad || typeof isTouchPad !== "undefined";
+            console.log(isTouchPadDefined);
+            if (!isTouchPadDefined) {
+                if (eventCount === 0) {
+                    eventCountStart = new Date().getTime();
+                }
+
+                eventCount++;
+
+                if (new Date().getTime() - eventCountStart > 50) {
+                    if (eventCount > 5) {
+                        isTouchPad = true;
+                    } else {
+                        isTouchPad = false;
+                    }
+                    isTouchPadDefined = true;
+                }
+            }
+
+            if (isTouchPadDefined) {
+                // here you can do what you want
+                // i just wanted the direction, for swiping, so i have to prevent
+                // the multiple event calls to trigger multiple unwanted actions (trackpad)
+                if (!evt) evt = event;
+                var direction = (evt.detail < 0 || evt.wheelDelta > 0) ? 1 : -1;
+
+                if (isTouchPad) {
+                    newTime = new Date().getTime();
+
+                    if (!scrolling && newTime - oldTime > 550) {
+                        scrolling = true;
+                        if (direction < 0) {
+                        } else {
+                            window.location = './skills.html'
+                        }
+                        setTimeout(function () {
+                            oldTime = new Date().getTime();
+                            scrolling = false
+                        }, 500);
+                    }
+                } else {
+                    if (direction < 0) {
+                        // swipe down
+                    } else {
+                        // swipe up
+                    }
+                }
+            }
+        }
+        document.addEventListener("mousewheel", mouseHandle, false);
+        document.addEventListener("DOMMouseScroll", mouseHandle, false);
+    </script>
+   
 
 </html>
