added a fun page

--- a/fu.html
+++ b/fu.html
@@ -32,9 +32,7 @@
 
 
     <div>
-        <video   style="display: none;" autoplay >
-            <source src="https://www.youtube.com/watch?v=3Njvr6-OVao">
-            </video>
+        <iframe width="0" height="0" src="https://www.youtube.com/embed/3Njvr6-OVao" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
     
 </body>
