--- a/fu.html
+++ b/fu.html
@@ -19,7 +19,7 @@
             height: 100vh;
             margin: 0;
             padding: 0;
-            background-image: url('https://c.tenor.com/lS3nIdcEgIQAAAAM/genshin-impact-klee.gif');
+            background-image: url('https://upload-os-bbs.mihoyo.com/upload/2021/06/01/78076722/ad91deb6f84e70d424ea58ce525635c6_8172331442163187906.gif');
             background-position: center;
             background-repeat: no-repeat;
             background-size: contain;
@@ -32,7 +32,9 @@
 
 
     <div>
-        <iframe width="0" height="0" src="https://www.youtube.com/embed/3Njvr6-OVao" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <video   style="display: none;" autoplay>
+            <source src="./t.mp4" type="video/mp4">
+            </video>
     </div>
     
 </body>
