--- a/about.html
+++ b/about.html
@@ -37,6 +37,7 @@
             <a href="index.html"><i class="icon-hom"></i></a>
             <a class="active" href="about.html"><i class="icon-prof"></i></a>
             <a href="skills.html"><i class="icon-gear"></i></a>
+            <a  href="demos.html"><i class="icons-demo"></i></a>
             <a href="contact.html"><i class="icon-mail"></i></a>
         </div>
 
