--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
             <a class="active" href="index.html"><i class="icon-hom"></i></a>
             <a href="about.html"><i class="icon-prof"></i></a>
             <a href="skills.html"><i class="icon-gear"></i></a>
+            <a  href="demos.html"><i class="icons-demo"></i></a>
             <a href="contact.html"><i class="icon-mail"></i></a>
         </div>
 
