--- a/demo.html
+++ b/demo.html
@@ -13,7 +13,7 @@
     <div class="demo-container">
         <img src="https://m.media-amazon.com/images/M/MV5BNzQyYzU3Y2MtOWY2Yy00ZGM2LTg3ZTUtMDJkZTJiMmEzMjYxXkEyXkFqcGdeQXVyMTI2NTY3NDg5._V1_.jpg" alt="" class="demo-img">
         <div class="demo-text">
-            <h2 class="demo-title">Jujutsu Kaisen</h2>
+            <h2 class="demo-title">Jujuthsu Kaisen</h2>
             <p class="demo-desc">Idly indulging in baseless paranormal activities with the Occult Club, high schooler Yuuji Itadori spends his days at either the clubroom or the hospital, where he visits his bedridden grandfather. However, this leisurely lifestyle soon takes a turn for the strange when he unknowingly encounters a cursed item. Triggering a chain of supernatural occurrences</p>
         </div>
        </div>
