Added [rojects page

--- a/skills.html
+++ b/skills.html
@@ -34,7 +34,7 @@
             <a href="index.html"><i class="icon-hom"></i></a>
             <a href="about.html"><i class="icon-prof"></i></a>
             <a class="active" href="skills.html"><i class="icon-gear"></i></a>
-            <a  href="demos.html"><i class="icons-demo"></i></a>
+            <a  href="projects.html"><i class="icons-demo"></i></a>
             <a href="contact.html"><i class="icon-mail"></i></a>
         </div>
 
