New:Added resume

--- a/skills.html
+++ b/skills.html
@@ -36,6 +36,7 @@
             <a class="active" href="skills.html"><i class="icon-gear"></i></a>
             <a  href="projects.html"><i class="icons-demo"></i></a>
             <a href="contact.html"><i class="icon-mail"></i></a>
+            <a href="resume.html"><i class="icon-mail"></i></a>
         </div>
 
         <ul>
