--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
             <a href="skills.html"><i class="icon-gear"></i></a>
             <a  href="projects.html"><i class="icons-demo"></i></a>
             <a href="contact.html"><i class="icon-mail"></i></a>
+            <a  href="resume.html"><i class="icon-file"></i></a>
+       
         </div>
 
         <ul>
